schema/testdata/validation_role_duplicate_definitions/extra.keel
role Admin {
  emails {
    "tom@keel.xyz"
  }
}
